# crossterm

./: .gitignore  .justfile  Cargo.toml
_src/: _main.rs
src/: main.rs
src/functions/: client.rs  convert_key.rs  event_methods.rs  generate_private_key.rs  utils.rs
tests/: tests.rs
