[package]
name = "crossterm_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.9.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features=false }
secp256k1 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
chrono = "0.4.24"
tungstenite = { version = "0.18", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.18", default-features = true, features = ["handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
futures = "0.3"
thiserror = "1.0.40"
url = "2.3.1"
async-std = "1.12"
bitflags = { version = "2.3" }
crossterm = { version = "0.27", features = ["event-stream", "filedescriptor", "serde", "use-dev-tty"] }
document-features = "0.2.10"
futures-core = { version = "0.3", optional = true, default-features = false }
futures-timer = "3.0"
parking_lot = "0.12"
serial_test = "2.0.0"
temp-env = "0.3.6"
tokio = { version = "1.25", features = ["full"] }

[features]
default = ["bracketed-paste", "events", "windows"]

#! ### Default features
## Enables triggering [`Event::Paste`](event::Event::Paste) when pasting text into the terminal.
bracketed-paste = []

## Enables reading input/events from the system using the [`event`] module.
events = ["dep:mio", "dep:signal-hook", "dep:signal-hook-mio"]

## Enables windows specific crates.
windows = ["dep:winapi", "dep:crossterm_winapi"]
#! ### Optional Features

## Enables the [EventStream](event::EventStream) struct for async event reading.
event-stream = ["dep:futures-core", "events"]

## Enables [`serde`] for various types.
serde = ["bitflags/serde"]

## Enables raw file descriptor polling / selecting instead of mio.
use-dev-tty = ["filedescriptor", "rustix/process"]

# Windows dependencies
[target.'cfg(windows)'.dependencies]
crossterm_winapi = { version = "0.9.1", optional = true }
winapi = { version = "0.3.9", optional = true, features = ["winuser", "winerror"] }

# UNIX dependencies
[target.'cfg(unix)'.dependencies]
filedescriptor = { version = "0.8", optional = true }
# Default to using rustix for UNIX systems, but provide an option to use libc for backwards
# compatibility.
libc = { version = "0.2", default-features = false, optional = true }
mio = { version = "1.0", features = ["os-poll"], optional = true }
rustix = { version = "0.38.34", default-features = false, features = ["std", "stdio", "termios"] }
signal-hook = { version = "0.3.17", optional = true }
signal-hook-mio = { version = "0.2.4", features = ["support-v1_0"], optional = true }

# bins
[[bin]]
name = "event-read"
required-features = ["bracketed-paste", "events"]

[[bin]]
name = "event-read-line"
required-features = ["bracketed-paste", "events"]

[[bin]]
name = "event-match-modifiers"
required-features = ["bracketed-paste", "events"]

[[bin]]
name = "event-poll-read"
required-features = ["bracketed-paste", "events"]

[[bin]]
name = "event-stream-async-std"
required-features = ["event-stream", "events"]

[[bin]]
name = "event-stream-tokio"
required-features = ["event-stream", "events"]

[[bin]]
name = "event-read-char-line"
required-features = ["events"]

[[bin]]
name = "stderr"
required-features = ["events"]

[[bin]]
name = "key-display"
required-features = ["events"]

[dev-dependencies]
just = "1.38.0"
nostr_rust = "0.20.3"
